dark mode enablement (#13)
* chore: remove dead code, fix javadoc, remove unused import

* chore: add screenshot to README.md

* chore: remove duplicated fields for AppConfig

* feat: enable configuration of chart group visiubility

* chore: refactor naming and cast to double

* feat: add default Xmx Xms settings

* feat: add GPU memory to Memory chart

* feat: add scaffolding for dark mode

* feat: add dark mode

* feat: add dark mode support via config

* chore: extract metric literals to enum

* chore: remove duplicated test

---------

Co-authored-by: lcappuccio <9638971+lcappuccio@users.noreply.github.com>